Fixed: Security issues regarding file downloads and download titles
Added: Option to not count admin downloads. ( https://github.com/WPChill/download-monitor/issues/854 )
Added: No-index/no-follow header for redirect to file option ( https://github.com/WPChill/download-monitor/issues/879 )
Added: Welcome banner on activation ( https://github.com/WPChill/download-monitor/issues/874 )

= 4.5.8 - 28.03.2022 =
Fixed: Upgrade to PRO now disappears when all extensions installed ( https://github.com/WPChill/download-monitor/issues/875 )

= 4.5.7 - 21.03.2022 =
Changed: Removed Download Duplicator from LITE vs PRO page ( https://github.com/WPChill/download-monitor/issues/872 )
Changed: Versions from Gutenberg block now mention `n/a #id` as title if they are non-versioned ( https://github.com/WPChill/download-monitor/issues/873 )
Added: Upgrade to pro link in plugins page ( https://github.com/WPChill/download-monitor/issues/870 ) 
Added: do_action in shortcodes so we can add scripts only if shortcode is present ( https://github.com/WPChill/download-monitor/issues/868 )
Change: members_only column to locked_downloads in admin listing table and added filters so we can override from extensions ( https://github.com/WPChill/download-monitor/issues/867 )

= 4.5.6 - 14.03.2022 =
Fixed: Endpoint changing value notice and flushing permalinks on endpoint change ( https://github.com/WPChill/download-monitor/issues/801 )
Fixed: Place back the categories column in admin list view and change the copy shortcode functionality ( https://github.com/WPChill/download-monitor/issues/821 )
Changed: Removed thumb column from Admin list table
Fixed: PolyLang compatibility ( https://github.com/WPChill/download-monitor/issues/733 )
Changed: Uploader enhancement ( https://github.com/WPChill/download-monitor/issues/869 )

= 4.5.5 - 08.03.2022 =
* Fixed: Uninstall now completely removes everything based on selection ( https://github.com/WPChill/download-monitor/issues/761 )